--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ html {
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	font-size: 1em;
-	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -49,10 +48,8 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	height: ;
 	width: 100%;
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -62,7 +59,7 @@ header {
 header h1 {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
-	padding: 38px 0;
+	padding: 38px 20px 20px 20px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -95,26 +92,18 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	width: 100%;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
 }
 
-.main-image {
-	height: auto;
-
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-
-}
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
@@ -130,22 +119,7 @@ header nav ul li a{
 .section-two,
 .section-three {
 	width: 100%;
-	height: auto;
-
 	border-top: 1px solid #eee;
-}
-
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-
-}
-
-.section-two h4,
-.section-three h4 {
-
 }
 
 .menu {
@@ -161,18 +135,17 @@ header nav ul li a{
 	color: #333;
 	font-size: 1em;
 	line-height: 21px;
-	padding: 10px 0;
+	padding:  0;
 }
 
 .address {
 	font-size: 1em;
 	line-height: 24px;
-	padding: 10px 0;
+	padding: 0;
 }
 
 /*The widths are in a percentage!*/
 footer {
-	height: ;
 	width: 100%;
 	border-top: 3px solid #eee;
 	display: flex;
@@ -185,4 +158,44 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: 0.875em;
+}
+
+/***** Tablet Styles *****/
+@media only screen and (min-width: 768px) {
+	.bottom-section {
+		justify-content: space-between;
+		align-items: flex-start;
+    border-top: 1px solid #eee;
+	}
+	.section-one,
+	.section-two,
+	.section-three {
+		border-top: none;
+		flex-basis: 30%;
+	}
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 20px;
+	}
+}
+
+/***** Desktop Styles *****/
+@media only screen and (min-width: 1200px) {
+	header {
+		justify-content: space-between;
+	}
+	header h1 {
+		width: 30%;
+    padding: 0;
+    border-bottom: none;
+    text-align: left;
+	}
+	header nav {
+		width: 40%;
+	}
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
